# rzem-ai-hermes-plugin-memory

./: .gitignore  README.md  __init__.py  plugin.yaml  pyproject.toml
hermes_plugin_memory/: __init__.py  client.py  config.py  errors.py  models.py  plugin.py  provider.py
tests/: test_provider.py
